# summarize-documents

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  setup.py  summarize_documents.py  test_basic.py
examples/: combined.json
examples/pdfs/: 2025.12.Digital.md  Eph75_04.txt  Eph82_04.json  SJAA1957.json
src/document_summarizer/: __init__.py  cli.py  processor.py
